# rusty

./: .gitignore
advance/: Cargo.toml  Makefile
advance/docs/: closure.md  concurency.md  lifetime.md  smart_point.md  types.md
advance/src/: main.rs
advance/src/asyncs/: demo.rs  future.rs  mod.rs  multifuture.rs  pin.md  pins.rs  problem.rs  start.rs
advance/src/circle/: circle_ref.rs  mod.rs  note.md  self_ref.rs
advance/src/coco/: transport.rs
advance/src/concurrency/: atomics.rs  message.rs  mod.rs  sends.rs  syncs.rs  threads.rs
advance/src/errors/: mod.rs
advance/src/functional/: closure.rs  iter.rs  mod.rs
advance/src/globalvar/: var.rs
advance/src/intotype/: converse.rs  custom.rs  enumint.rs  mod.rs  size.rs
advance/src/lifetime/: advance.rs  mod.rs  statics.rs
advance/src/macros/: start.rs
advance/src/point/: boxs.rs  cells.rs  derefs.rs  drops.rs  mod.rs  rcs.rs
advance/src/tokios/: futures.rs  mod.rs  streams.rs
advance/src/trust/: mod.rs  superpower.rs
findctl/: Cargo.toml  poem.txt
findctl/src/: lib.rs  main.rs
rudis/: Cargo.toml  Makefile  tokio.md
rudis/examples/: rudis-client.rs
rudis/src/: lib.rs  main.rs
rust-base/: Makefile
rust-base/src/: compound.rs  err.rs  fo.rs  generic.rs  haaashmap.rs  main.rs  (+5 more)
src/: advancetrait.rs  basetype.rs  compound.rs  config.yaml  crates.rs  docs.rs  err.rs  flow.rs  generic.rs  haaashmap.rs  lib.rs  lifetime.rs  main.rs  matchpattern.rs  method.rs  mod.rs  ownership.rs  package.md  traitobj.rs  traits.rs  variable.rs  vector.rs
zero/: 404.html  Cargo.toml  hello.html
(+13 files in other folders)
