[package]
name = "advance"
version = "0.1.0"
edition = "2021"

[dependencies]
num_enum = "0.7.3"
thread_local = "1.1"
# async 运行时
futures = "0.3.31"
# 运行时加载静态变量
lazy_static = "1.5.0"
# rust连接外部库
cc = "1.1.30"
# 自定义错误处理
anyhow = "1.0.89"
# 异步处理标准库
async-std = "1.13.0"
# 异步 trait 库
async-trait = "0.1.83"
# pingora 库
pingora = { version = "0.3.0", features = ["lb"] }
# tokio runtime 库
tokio = { version = "1.41.0", features = ["full"] }
# tokio stream 库
tokio-stream = "0.1.16"
